<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    app:cardCornerRadius="@dimen/margin_medium">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.padcx.doctors.views.components.RoundedCornerImageView
            android:id="@+id/ivPatientImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:src="@drawable/dummy_profile"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/tvPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivPatientImage"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_toEndOf="@id/ivPatientImage"
            android:text="Aung Aung"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/tvPatientDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_toEndOf="@id/ivPatientImage"
            android:layout_below="@id/tvPatientName"
            android:text="23 Nov 2000"
            android:textSize="@dimen/text_small"
            android:textColor="@color/secondary_text"
            android:drawableLeft="@drawable/ic_baseline_date_range_24"
            android:drawableTint="@color/accent"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/margin_smaller"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/ivPatientImage"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_send_text"
            android:backgroundTint="@color/accent"
            app:cornerRadius="@dimen/margin_medium_2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            android:layout_below="@id/ivPatientImage"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:id="@+id/view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:weightSum="3">

            <TextView
                android:id="@+id/tvMedicineHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_lbl_medicine_history"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="@dimen/margin_card_medium_2"
                android:paddingBottom="@dimen/margin_card_medium_2"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvMedicine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_lbl_medicine"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="@dimen/margin_card_medium_2"
                android:paddingBottom="@dimen/margin_card_medium_2"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tvRemark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_lbl_remark"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="@dimen/margin_card_medium_2"
                android:paddingBottom="@dimen/margin_card_medium_2"/>




        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>